<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="384dp"
              android:layout_height="314dp"
              android:id="@+id/map"
              tools:context=".CallActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origemText"
            android:ems="10"
            android:id="@+id/origem"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spn_Pickup"
            android:text="@string/pickup_label"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destinoText"
            android:ems="10"
            android:id="@+id/destino"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spn_Destiny"
        android:text="@string/destiny_label"/>
    <Button
            android:text="@string/chamar_carregadorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_call"/>
</LinearLayout>