<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/map"
              tools:context=".presentation.ui.activities.client.ClientMainActivity"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_alignBottom="@id/map"
            android:layout_marginBottom="20dp"
            android:id="@+id/request_card">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@id/request_card"
                android:padding="12dp">
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_Pickup"
                    android:text="@string/pickup_label"
                    android:layout_marginBottom="12dp"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spn_Destiny"
                    android:text="@string/destiny_label"
                    android:layout_marginBottom="12dp"/>
            <Button
                    android:text="@string/chamar_carregadorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_call"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>